2016-01-10

    * 新增全局函数库


2015-02-08

    * 优化完善了Loader中的loadClass方法。
    * Bugfix
    * Version 0.6.0 released.


2015-02-04

    * Db_Abstract中新增debug方法，用法：$db->debug()->insert('tablename', array('col'=>'val'));。
    * 新增数据库的异常控制。


2015-02-03

    * 框架更名为Mini Framework，缩写依旧为：MF。
    * Router中新增checkRoute方法。
    * Bugfix.


2015-02-02

    * Db_Mysql中新增insertAll方法。
    * Exceptions中新增sendHttpStatus方法。
    * 框架性能优化。
    * Version 0.5.0 released.


2015-02-01

    * 新增Request类库。
    * 框架性能优化。


2015-01-30

    * 新增基于PDO的MySQL的类库。
    * Version 0.4 released.


2015-01-28

    * 新增异常控制机制。
    * Version 0.3 released.


2015-01-27

    * 新增处理GET和POST数据的类库。
    * Bugfix.


2015-01-26

    * 新增Rewrite路由模式。
    * Version 0.2 released.


2015-01-25

    * The first public version.
    * Version 0.1 released.